# reth-exex-plugin

./: .gitignore  Cargo.toml  Makefile  README.md
examples/minimal/: Cargo.toml
examples/minimal/src/: lib.rs
src/: lib.rs  main.rs  manager.rs  rpc.rs  sender.rs
src/plugin/: loaded.rs  mod.rs  trait.rs
tests/: minimal.rs
