[package]
name = "reth-exex-plugin"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[dependencies]
# reth
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }

eyre = "0.6.12"
futures = "0.3.30"
libloading = "0.8.5"
tokio = "1.40.0"
jsonrpsee = "0.24.5"

[[test]]
name = "minimal"
path = "tests/minimal.rs"
