[package]
name = "minimal"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[lib]
crate-type = ["dylib"]

[dependencies]
eyre = "0.6.12"
reth-exex-plugin = { version = "0.0", path = "../.." }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
